1.0-devel
=====================

 * Moved ATCTImageTransform class to lib

 * Added configuration options for PIL quality and resize algo.

 * Fix Image and File migration by renaming migrate_dc to last_migrate_dc, as
   the content_type metadata can't be set until the file is transferred.
   [alecm]

 * Couple of bug fixes in the FTI->FTI w/ dynamic views migration
   [rafrombrc]

 * Renamed max_size config option to max_file_size. Added max_image_dimension
   config option to set the maximum border for the original size of an image.
   [tiran]

 * Added some additional i18n markup.
   [hannosch]

 * Don't run version migration when installing the first time. People should run it
   after type migration.
   [tiran]

 * Disabled full catalog updated after type migration. If people need it they could
   do it after migration.
   [tiran]

 * Added migration to DynamicFTIs.
   [fschulze]

 * Changed index_html method on ATCTOrderedFolder to gracefully handle
   situation where acquisition of index_html attribute returns None.
   [rafrombrc]

 * Added syndication support to Smart Folders.
   [alecm]

 * Fixing up aliases and actions for CMF 1.5-style browser-default code, using
   CMFDynamicViewFTI.
   [optilude]

 * Some code related to browser default is moved to CMFDynamicViewFTI. All
   new versions of ATCT depend on this product now.
   [tiran]

 * Fixed some tests on Windows. Image files must be opened with 'rb'.
   [hannosch]

 * Moved around some fields. excludeFromNav is on the property sheet expect for
   folderish items and discussion is on the main sheet expecpt for folderish and
   Favorite.
   [tiran]

 * Added finalizeATCTSchema function to move the fields in the right position
   [tiran]

 * Fixed http://plone.org/collector/4127 permission incorrect on
   listSubtopics.
   [alecm]

 * Added migration to change the name of the Topic configlet.
   [alecm]

 * Fixed http://members.plone.org/collector/4076, adding exclude_from_nav to
   all content schemas.