@@ -1,9 +1,14 @@
 1.0-devel
 =====================
 
+ * Using migration code from DynamicViewFTI instead of own FTI migration code
+   [tiran]
+
  * Moved ATCTImageTransform class to lib
+   [tiran]
 
  * Added configuration options for PIL quality and resize algo.
+   [tiran]
 
  * Fix Image and File migration by renaming migrate_dc to last_migrate_dc, as
    the content_type metadata can't be set until the file is transferred.
